--- a/Pages/crudPuesto/Create.cshtml
+++ b/Pages/crudPuesto/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/puesto"
+﻿@page
 @model Tarea9Docker.Pages.crudPuesto.CreateModel
 
 @{
@@ -14,36 +14,16 @@
 </head>
 <body>
 
-<h4>Empleado</h4>
+<h4>Puesto</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Empleado.Nombre" class="control-label">Nombre</label>
-                <input asp-for="Empleado.Nombre" class="form-control" />
-                <span asp-validation-for="Empleado.Nombre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Empleado.Apellido" class="control-label">Apellido</label>
-                <input asp-for="Empleado.Apellido" class="form-control" />
-                <span asp-validation-for="Empleado.Apellido" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Empleado.Direccion" class="control-label">Direccion</label>
-                <input asp-for="Empleado.Direccion" class="form-control" />
-                <span asp-validation-for="Empleado.Direccion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Empleado.Telefono" class="control-label">Telefono</label>
-                <input asp-for="Empleado.Telefono" class="form-control" />
-                <span asp-validation-for="Empleado.Telefono" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Empleado.idPuesto" class="control-label">idpuesto</label>
-                <input asp-for="Empleado.idPuesto" class="form-control" />
-                <span asp-validation-for="Empleado.idPuesto" class="text-danger"></span>
+                <label asp-for="Puesto.nombrePuesto" class="control-label"></label>
+                <input asp-for="Puesto.nombrePuesto" class="form-control" />
+                <span asp-validation-for="Puesto.nombrePuesto" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -56,5 +36,8 @@
     <a asp-page="Index">Back to List</a>
 </div>
 
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
 </body>
 </html>
