--- a/Pages/crudPuesto/Delete.cshtml
+++ b/Pages/crudPuesto/Delete.cshtml
@@ -16,43 +16,19 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Empleado</h4>
+    <h4>Puesto</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Empleado.Nombre)
+            @Html.DisplayNameFor(model => model.Puesto.nombrePuesto)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Empleado.Nombre)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Empleado.Apellido)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Empleado.Apellido)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Empleado.Direccion)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Empleado.Direccion)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Empleado.Telefono)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Empleado.Telefono)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Empleado.idPuesto)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Empleado.idPuesto)
+            @Html.DisplayFor(model => model.Puesto.nombrePuesto)
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Empleado.idEmpleado" />
+        <input type="hidden" asp-for="Puesto.idPuesto" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
