--- a/Pages/crudPuesto/Details.cshtml
+++ b/Pages/crudPuesto/Details.cshtml
@@ -15,43 +15,19 @@
 <body>
 
 <div>
-    <h4>Empleado</h4>
+    <h4>Puesto</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Empleado.Nombre)
+            @Html.DisplayNameFor(model => model.Puesto.nombrePuesto)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Empleado.Nombre)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Empleado.Apellido)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Empleado.Apellido)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Empleado.Direccion)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Empleado.Direccion)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Empleado.Telefono)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Empleado.Telefono)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Empleado.idPuesto)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Empleado.idPuesto)
+            @Html.DisplayFor(model => model.Puesto.nombrePuesto)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-page="./Edit" asp-route-id="@Model.Empleado?.idEmpleado">Edit</a> |
+    <a asp-page="./Edit" asp-route-id="@Model.Puesto?.idPuesto">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
 </body>
