--- a/Pages/crudPuesto/Index.cshtml
+++ b/Pages/crudPuesto/Index.cshtml
@@ -20,45 +20,21 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Empleado[0].Nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Empleado[0].Apellido)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Empleado[0].Direccion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Empleado[0].Telefono)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Empleado[0].idPuesto)
+                @Html.DisplayNameFor(model => model.Puesto[0].nombrePuesto)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Empleado) {
+@foreach (var item in Model.Puesto) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
+                @Html.DisplayFor(modelItem => item.nombrePuesto)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Apellido)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Direccion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Telefono)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.idPuesto)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.idEmpleado">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.idEmpleado">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.idEmpleado">Delete</a>
+                <a asp-page="./Edit" asp-route-id="@item.idPuesto">Edit</a> |
+                <a asp-page="./Details" asp-route-id="@item.idPuesto">Details</a> |
+                <a asp-page="./Delete" asp-route-id="@item.idPuesto">Delete</a>
             </td>
         </tr>
 }
